syntax/tests/parsing/errors/expressions/letBinding.res
let foo = '2.

let foo = }true

let foo = )2

let foo = }f()

let foo = }}{2}

let foo = == {
  "foo"
}

